--- a/website/css/boxLayout.css
+++ b/website/css/boxLayout.css
@@ -19,7 +19,6 @@
   margin            : 20px;
 
   box-shadow        : 2px 2px 10px 0 rgba(0,0,0,0.3);
-
 }
 
 .box-header
@@ -47,8 +46,47 @@
 .box-body
 {
   width             : 100%;
-  height            : 80%;
+  height            : 66%;
   display           : flex;
+}
+
+.box-footer
+{
+  display           : flex;
+
+  height            : 14%;
+
+  border-top        : 1px solid rgba(125,125,125, 0.5);
+}
+
+.box-footer input[type="submit"]
+{
+  height            : 100%;
+  width             : 100%;
+
+  margin            : auto;
+
+  font-size         : 14px;
+}
+
+input[type="submit"]
+{
+  color             : white;
+  background-color  : #555;
+
+  border            : none;
+
+  transition        : all 0.2s;
+}
+
+input[type="submit"]:hover
+{
+  background-color : #777;
+}
+
+input[type="submit"]:active
+{
+  background-color : #bbb;
 }
 
 .box-body-content
@@ -57,6 +95,7 @@
   height            : 85%;
 
   margin            : auto;
+
 
   font-weight       : 500;
 }
@@ -84,4 +123,9 @@
 {
   width             : 100%;
   height            : 90%;
+}
+
+input[type="hidden"]
+{
+  height            : 0px;
 }
