--- a/website/css/masterstyle.css
+++ b/website/css/masterstyle.css
@@ -6,13 +6,89 @@
   font-family         : sans-serif;
 }
 
+#main-wrapper
+{
+  display             : block;
+}
+
 #content-wrapper
 {
   height              : 1200px;
   width               : 83%;
 
+  margin              : auto;
   float               : right;
+}
 
+.content-header
+{
+  display             : flex;
+  height              : 17%;
+
+  padding-top         : 20px;
+
+  flex-direction      : column;
+}
+
+.content-topic
+{
+  margin              : auto;
+
+  font-size           : 50px;
+  font-style          : italic;
+}
+
+.content-header-info
+{
+  display             : flex;
+  width               : 60%;
+  height              : 70%;
+
+  margin              : auto;
+
+  flex-wrap           : wrap;
+}
+
+.content-header-info input
+{
+  width               : 100%;
+  height              : 20px;
+}
+
+.content-header-info input[type="submit"]
+{
+  font-weight         : 600;
+
+  margin              : 2px 0 0 0;
+}
+
+.content-header-info p
+{
+  text-align          : center;
+}
+
+.content-header-info *
+{
+  margin              : auto;
+}
+
+.content-header-box
+{
+  display             : flex;
+  height              : 55%;
+
+  flex-direction      : column;
+}
+
+.content-header-box-topic
+{
+  width               : 100%;
+  height              : 30px;
+
+  text-align          : center;
+
+  font-weight         : 600;
+  line-height         : 30px;
 }
 
 #sidenav
@@ -82,7 +158,7 @@
 
   background-color    : white;
 
-  transition          : all 0.60s;
+  transition          : all 0.60s;style
 }
 
 .nav-dropdown:hover > .nav-dropdown-content
@@ -116,7 +192,7 @@
   text-decoration     : none;
   font-size           : 18px;
 
-  transition          : all 0.4s;
+  transition          : all 0.2s;
 }
 
 .nav-dropdown-content a:hover
